# GroupChatAgents

./: .gitignore  .replit  data.json  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  test.db  vite.config.ts
backend/: agents.py  config.py  database.py  graph.py  llm.py  memory.py  models.py  orchestrator.py  routes.py  schemas.py
backend/agents/: __init__.py
backend/agents/critic/: __init__.py  critic.py  prompts.py  tools.py
client/src/: index.css
client/src/components/: AddAgentToGroupDialog.tsx  AgentCard.tsx  AppSidebar.tsx  ChatArea.tsx  ChatInput.tsx  ChatMessage.tsx  EmptyState.tsx  RightPanel.tsx  TypingIndicator.tsx
client/src/components/examples/: AddAgentToGroupDialog.tsx  AgentDetailPanel.tsx  AppSidebar.tsx  ChatInput.tsx  ChatMessage.tsx  CreateAgentDialog.tsx  CreateGroupDialog.tsx  EmptyState.tsx  RightPanel.tsx
client/src/lib/: hooks.ts
shared/: schema.ts
temp_extracted/AgentChatUI/: .replit  design_guidelines.md  replit.md
temp_extracted/AgentChatUI/attached_assets/: UX Pilot - Superfast UX_UI Design with AI_1764519748929.html
temp_extracted/AgentChatUI/client/: index.html
temp_extracted/AgentChatUI/client/src/: index.css
temp_extracted/AgentChatUI/client/src/components/: AgentAvatar.tsx  AgentDetailPanel.tsx  ChatArea.tsx  ChatMessage.tsx  CreateAgentDialog.tsx  CreateGroupDialog.tsx  GroupItem.tsx  ThemeToggle.tsx
temp_extracted/AgentChatUI/client/src/lib/: store.ts
temp_extracted/AgentChatUI/server/: db.ts  routes.ts  storage.ts
temp_extracted/AgentChatUI/shared/: schema.ts
(+5 files in other folders)
